ISIS-2617: fixes dropup menu going hiding when mouse pointer falls into the gap between button and dropup

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -588,6 +588,10 @@ ul.dropdown-menu {
 	padding-top: 0;
 	margin-top: 0;
 }
+.dropup ul.dropdown-menu {
+	padding-bottom: 0;
+	margin-bottom: 0;
+}
 
 /* removes the caret (arrow down) from the additional links selector dropdowns */
 .additionalLinkList .btn.btn-secondary.dropdown-toggle::after {
